# 2022-sbi-ci-workshop

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: 001_simple_workflow.yml  002_multiple_jobs.yml  002_multiple_jobs.yml.disabled  002_multiple_jobs_v3.yml  002_parallel_jobs.yml  003_dependant_jobs.yml  003_dependant_jobs.yml.disabled  003_different_os.yml.disabled  004_different_os.yml  004_different_os.yml.disabled  004_job_matrix_v1.yml  004_job_matrix_v2.yml  004_job_matrix_v2.yml.disabled  004_job_matrix_v3.yml  004_job_matrix_v3.yml.disabled  005_cache_v1.yml.disabled  005_cache_v2.yml  005_cache_v3.yml.disabled  005_job_matrix.yml  005_job_matrix_v1.yml  005_job_matrix_v1.yml.disabled  005_job_matrix_v2.yml  005_job_matrix_v3.yml  006_installing_software_on_gha.yml.disabled  006_job_matrix_v2.yml  006_job_matrix_v2.yml.disabled  006_simple_cache.yml  007_job_matrix_v3.yml  007_job_matrix_v3.yml.disabled  007_running_actions_using_containers.yml  007_running_actions_using_containers.yml.disabled  007_simple_cache.yml  008_cache_v1.yml.disabled  008_multiple_caches.yml  009_cache_v2.yml  009_cache_v2.yml.disabled  010_cache_v3.yml.disabled  011_installing_software_on_gha.yml  011_installing_software_on_gha.yml.disabled  build-docker-image.yml  (+4 more)
.github/workflows/solutions/: 002_multiple_jobs.yml  003_dependant_jobs.yml  004_different_os.yml  004_job_matrix_v3.yml  005_job_matrix_v1.yml  006_job_matrix_v2.yml  007_job_matrix_v3.yml  008_cache_v1.yml  009_cache_v2.yml  012_running_actions_using_containers.yml
cryptonite/: __init__.py  __main__.py  decrypt.py  encrypt.py  utils.py
cryptonite/test/: cryptonite_lib_test.py
