# Copyright (C) 2022 Roberto Rossini <roberros@uio.no>
# SPDX-License-Identifier: MIT

# Inspired by https://github.com/dib-lab/screed

[metadata]
name = cryptonite
description = robust encryption for the citizen of Metropolis!
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/robomics/sq-meetings-workshop-2022-04-01
author = Roberto Rossini
author_email = roberros@uio.no
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Windows :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security :: Cryptography
project_urls =
    Documentation = https://github.com/robomics/sq-meetings-workshop-2022-04-01
    Source = https://github.com/robomics/sq-meetings-workshop-2022-04-01/wiki
    Tracker = https://github.com/robomics/sq-meetings-workshop-2022-04-01/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    numpy
    setuptools_scm >= 7.0
python_requires = >=3.7
setup_requires =
    setuptools >= 45
    wheel

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[options.entry_points]
console_scripts =
    cryptonite = cryptonite.__main__:main

[options.extras_require]
test =
    pytest >= 5.3
all =
    %(test)s